<resources>
    <string name="app_name">Eat&amp;Basta</string>
    <string name="logo">Logo</string>
    <string name="login"><b>Login</b></string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="password_smarrita">Password smarrita?</string>
    <string name="new_register">Registrati</string>
    <string name="registrati"><b>Registrati</b></string>
    <string name="email">Email</string>
    <string name="verify_password">Reinserisci password</string>
    <string name="birthday">Data di nascita</string>
    <string name="tot"><b>Tot: </b></string>
    <string name="ordina">Ordina</string>
    <string name="logout">Logout</string>
    <string name="phone_number">Phone number</string>
    <string name="dark_mode">Dark mode</string>
    <string name="inital_quantity">0.0</string>
    <string name="view_mode">View mode</string>
    <string name="checkout">Checkout</string>
    <string name="testo_prova">Prova</string>
    <string name="min_order">Min order:</string>
    <string name="riepilogo_ordine">Riepilogo ordine</string>
    <string name="pay">PAY</string>
    <string name="money_value">€</string>
</resources>
