<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".activity.RegisterActivity">

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp" />
    <android.support.v7.widget.LinearLayoutCompat
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <TextView
            android:text="@string/registrati"
            android:textSize="30sp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </android.support.v7.widget.LinearLayoutCompat>
    <EditText
        android:id="@+id/email_register"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <EditText
        android:id="@+id/password_register"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <EditText
        android:id="@+id/verify_password_register"
        android:hint="@string/verify_password"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <EditText
        android:id="@+id/phone_register"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />
    <android.support.v7.widget.LinearLayoutCompat
        android:layout_weight="1"
        android:weightSum="3"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
        <Button
            android:id="@+id/register_button_register"
            android:text="@string/registrati"
            android:enabled="false"
            android:background="@drawable/rounded_button"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
    </android.support.v7.widget.LinearLayoutCompat>

</android.support.v7.widget.LinearLayoutCompat>