<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:weightSum="15"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.CartActivity">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/product_list"
        android:layout_weight="13"
        android:layout_width="match_parent"
        android:layout_height="0dp" />

    <ProgressBar
        android:id="@+id/checkout_bar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp" />
    <android.support.v7.widget.LinearLayoutCompat
        android:layout_weight="1"
        android:weightSum="5"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <TextView
            android:layout_gravity="center"
            android:text="@string/tot"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/total_text"
            android:text="@string/inital_quantity"
            android:layout_gravity="center"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
        <Button
            android:id="@+id/checkout_button"
            android:text="@string/ordina"
            android:enabled="false"
            android:layout_gravity="center"
            android:background="@drawable/rounded_button"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content" />
    </android.support.v7.widget.LinearLayoutCompat>
</android.support.v7.widget.LinearLayoutCompat>